--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <!-- Modal -->
 <div id="myModal" class="modal">
     <div class="modal-content">
-        <a href="https://sonovive.officialnaturalhealthoffers.online/" class="close" preload>Close</a>
+        <a href="https://sonovive.officialnaturalhealthoffers.online/" class="close" preload>&#10005;</a>
         <h2>Cookie Policy</h2>
         <p>This website uses cookies to personalize content and ads, provide social media features, and analyze our traffic. By clicking Accept, you agree to the use of cookies. For more information, please visit our <a href="https://sonovive.officialnaturalhealthoffers.online/" class="cookie-policy" preload>Cookie Policy</a></p>
         <a id="acceptBtn" href="https://sonovive.officialnaturalhealthoffers.online/" preload>Accept</a>
@@ -193,8 +193,9 @@
             window.location.href = this.href; // Redireciona para o link do botão Accept
         }
 
-        document.querySelector(".close").onclick = function() {
-            window.location.href = this.href; // Redireciona para o link do botão Close
+        document.querySelector(".close").onclick = function(event) {
+            event.preventDefault(); // Impede o comportamento padrão do link
+            window.location.href = this.href; // Redireciona para o link do "X"
         }
 
         // Lidar com os links dentro do modal
