--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         header {
             background: linear-gradient(#739BC4, #3D76B0);
+            min-height: 100vh;
             
         }
 
@@ -44,6 +45,9 @@
             max-width: 600px;
             text-align: left;
             position: relative;
+            margin: auto; /* Centraliza horizontalmente */
+            top: 70%; /* Posiciona no meio verticalmente */
+            transform: translateY(-70%); /* Ajusta para o centro vertical */
         }
 
         .modal-content h2 {
@@ -171,10 +175,10 @@
 <!-- Modal -->
 <div id="myModal" class="modal">
     <div class="modal-content">
-        <a href="https://sonovive.officialnaturalhealthoffers.online/" class="close" preload>&#10005;</a>
+        <a href="#" class="close" preload>&#10005;</a>
         <h2>Cookie Policy</h2>
         <p>This website uses cookies to personalize content and ads, provide social media features, and analyze our traffic. By clicking Accept, you agree to the use of cookies. For more information, please visit our <a href="https://sonovive.officialnaturalhealthoffers.online/" class="cookie-policy" preload>Cookie Policy</a></p>
-        <a id="acceptBtn" role="button" href="https://sonovive.officialnaturalhealthoffers.online/" preload>Accept</a>
+        <a id="acceptBtn" role="button" href="#" preload>Accept</a>
     </div>
 </div>
 
