--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div class="modal-content">
         <a href="#" class="close" preload>&#10005;</a>
         <h2>Cookie Policy</h2>
-        <p>This website uses cookies to personalize content and ads, provide social media features, and analyze our traffic. By clicking Accept, you agree to the use of cookies. For more information, please visit our <a href="https://sonovive.officialnaturalhealthoffers.online/" class="cookie-policy" preload>Cookie Policy</a></p>
+        <p>This website uses cookies to personalize content and ads, provide social media features, and analyze our traffic. By clicking Accept, you agree to the use of cookies. For more information, please visit our <a href="#" class="cookie-policy" preload>Cookie Policy</a></p>
         <a id="acceptBtn" role="button" href="#" preload>Accept</a>
     </div>
 </div>
