--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         header {
             background: linear-gradient(#739BC4, #3D76B0);
             min-height: 100vh;
-            
         }
 
         header h1 {
@@ -32,7 +31,6 @@
             top: 0;
             width: 100%;
             height: 100%;
-            overflow: auto;
             background-color: rgba(0, 0, 0, 0.5);
         }
 
@@ -46,8 +44,8 @@
             text-align: left;
             position: relative;
             margin: auto; /* Centraliza horizontalmente */
-            top: 70%; /* Posiciona no meio verticalmente */
-            transform: translateY(-70%); /* Ajusta para o centro vertical */
+            top: 50%; /* Posiciona no meio verticalmente */
+            transform: translateY(-50%); /* Ajusta para o centro vertical */
         }
 
         .modal-content h2 {
@@ -115,11 +113,15 @@
         }
 
         @media (max-width: 767.98px) {
-        .modal-content {
-            top: 70%; /* Posiciona mais abaixo na versão mobile */
-            transform: translateY(-70%); /* Ajusta para o centro vertical */
+            .modal-content {
+                top: 70%; /* Posiciona mais abaixo na versão mobile */
+                transform: translateY(-70%); /* Ajusta para o centro vertical */
+            }
         }
-            
+
+        /* Adiciona a classe para desabilitar a rolagem */
+        .no-scroll {
+            overflow: hidden;
         }
     </style>
 </head>
@@ -175,10 +177,10 @@
 <!-- Modal -->
 <div id="myModal" class="modal">
     <div class="modal-content">
-        <a href="#" class="close" preload>&#10005;</a>
+        <a href="#" class="close">&#10005;</a>
         <h2>Cookie Policy</h2>
-        <p>This website uses cookies to personalize content and ads, provide social media features, and analyze our traffic. By clicking Accept, you agree to the use of cookies. For more information, please visit our <a href="#" class="cookie-policy" preload>Cookie Policy</a></p>
-        <a id="acceptBtn" role="button" href="#" preload>Accept</a>
+        <p>This website uses cookies to personalize content and ads, provide social media features, and analyze our traffic. By clicking Accept, you agree to the use of cookies. For more information, please visit our <a href="#" class="cookie-policy">Cookie Policy</a></p>
+        <a id="acceptBtn" role="button" href="#">Accept</a>
     </div>
 </div>
 
@@ -189,17 +191,19 @@
     document.addEventListener("DOMContentLoaded", function() {
         var modal = document.getElementById("myModal");
         var acceptBtn = document.getElementById("acceptBtn");
+        var closeBtn = document.querySelector(".close");
         var modalLinks = document.querySelectorAll('.modal-content a[href]');
 
-        // Exibe o modal ao carregar a página
+        // Exibe o modal ao carregar a página e desabilita a rolagem
         modal.style.display = "block";
+        document.body.classList.add("no-scroll");
 
         acceptBtn.onclick = function(event) {
             event.preventDefault(); // Impede o comportamento padrão do link
             window.location.href = this.href; // Redireciona para o link do botão Accept
         }
 
-        document.querySelector(".close").onclick = function(event) {
+        closeBtn.onclick = function(event) {
             event.preventDefault(); // Impede o comportamento padrão do link
             window.location.href = this.href; // Redireciona para o link do "X"
         }
@@ -209,19 +213,6 @@
             link.onclick = function(event) {
                 event.preventDefault(); // Impede o comportamento padrão do link
                 window.location.href = this.href; // Redireciona para o link clicado dentro do modal
-            }
-        });
-
-        // Pré-carregar o link do modal
-        var preloadLinks = document.querySelectorAll('[preload]');
-        preloadLinks.forEach(function(link) {
-            var href = link.getAttribute('href');
-            if (href) {
-                var preloadLink = document.createElement('link');
-                preloadLink.href = href;
-                preloadLink.rel = 'preload';
-                preloadLink.as = 'document';
-                document.head.appendChild(preloadLink);
             }
         });
     });
