--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         #acceptBtn {
             background-color: #007bff;
             color: white;
-            padding: 14px 28px; /* Ajuste para tornar o botão do mesmo tamanho que o botão da navbar */
+            padding: 12px 24px; /* Ajuste para tornar o botão do mesmo tamanho que o botão da navbar */
             border: none;
             cursor: pointer;
             text-decoration: none;
@@ -80,6 +80,7 @@
             margin-top: 20px;
             font-size: 16px;
             transition: background-color 0.3s ease; /* Adicionado efeito de transição */
+            border-radius: 4px; /* Cantos minimamente arredondados */
         }
 
         #acceptBtn:hover {
