--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
 
         .modal-content {
-            background-color: rgba(255, 255, 255, 0.9); /* Transparência adicionada */
+            background-color: #C2C6CB; /* Transparência adicionada */
             margin: 10% auto;
             padding: 40px;
             border: 1px solid #888;
